# sage

./: .gitignore  Implement.md  Implement2.md  README.md  index.html  manifest.webmanifest  styles.css  sw.js
.github/workflows/: desktop.yml
desktop/: CMakeLists.txt  README.md
desktop/icons/: SAGE.icns
desktop/src/macos/: Info.plist.in  SAGE.entitlements  main.mm
desktop/src/windows/: SAGE.exe.manifest  SAGE.rc.in  main.cpp
desktop/tools/: generate_icons.swift
src/: app.js
